Make sure both DELETE and PUT requests properly handle redirection requests to address the issue reported in bug# 267063. In the process of addressing the afformentioned bug the following related changes and cleanups were performed:

- Removed the check for HTTP_POST on redirection so that kio_http behaves
    exactly like Firefox and Chromium except for HEAD requests. Converting
    HEAD requests to GET makes no sense.

  - Changed both ::del and ::put to leave the query component of the request
    URL alone except for WebDAV requests. Not sure why it is removed for DAV
    requests either.

  - Changed ::del to properly handles any message body returned by the server.

  - Renamed sendHttpPutError to sendHttpError and converted it to handle HTTP
    response code errors for all HTTP methods, not just PUT.

  - Changed proceedUntilResponseContent to use the new sendHttpError function
    to send error to the client.

  - Converted both ::del and ::put to use proceedUntilResponseContent since it
    now correctly handles errors returned by the server.

BUG: 267063
FIXED-IN: 4.7.3